# retail-lakehouse-pipeline

./: .env.example  .gitignore  Makefile  README.md  audit_error.txt  docker-compose.yml  pyproject.toml  requirements.txt  spark_test.txt
.streamlit/: config.toml
airflow/: Dockerfile  airflow.env  requirements-airflow.txt
airflow/dags/: nexcart_lakehouse_dag.py  nexcart_pipeline.py
config/: settings.yaml
dashboard/: app.py  requirements.txt  utils.py
dashboard/pages/: 1_Home.py  2_Executive_Overview.py  3_Gold_Layer.py  4_Features_Layer.py  5_Quality_Checks.py  6_Pipeline_Monitor.py
notebooks/: gold_queries.sql
scripts/: generate_data.py  generate_data_lite.py  query_duckdb.py  run_pipeline.py  run_pipeline_audited.py  setup_airflow_local.py  setup_env.sh  start_airflow_local.py
src/features/: feature_engineer.py
src/gold/: gold_builder.py
src/ingestion/: bronze_ingestor.py  schemas.py
src/quality/: data_quality.py
src/transformation/: silver_transformer.py
src/utils/: __init__.py  audit_logger.py  config.py  config_loader.py  logger.py  parquet_utils.py  pipeline_logger.py  schema_registry.py  spark_session.py
tests/unit/: test_config_loader.py  test_data_generation.py
